--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -8,3 +8,10 @@
     overflow: hidden;
     max-width: 300px;
 }
+
+@media screen and (max-width: 380px) {
+    .profile__title {
+        font-size: 27px;
+        line-height: 33px;
+    }
+}
