--- a/blocks/element/__img/element__img.css
+++ b/blocks/element/__img/element__img.css
@@ -2,5 +2,6 @@
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     width: 100%;
-    max-height: 282px;
+    min-height: 282px;
+    object-fit: cover;
 }
