--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -6,3 +6,11 @@
     flex-wrap: wrap;
     padding: 0;
 }
+
+@media screen and (max-width: 900px) {
+    .elements {
+        margin-top: 36px;
+        justify-content: center;
+        padding: 0 10px;
+    }
+}
