--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -6,3 +6,11 @@
     line-height: 22px;
     color: #545454;
 }
+
+@media screen and (max-width: 900px) {
+    .footer {
+        font-size: 14px;
+        line-height: 17px;
+        margin: 48px 0 36px 19px;
+    }
+}
