--- a/blocks/form/__btn/form__btn.css
+++ b/blocks/form/__btn/form__btn.css
@@ -14,6 +14,15 @@
     transition: all .25s;
 }
 
-.form__btn:hover{
+.form__btn:hover {
     opacity: 0.8;
+}
+
+@media screen and (max-width: 550px) {
+    .form__btn {
+        font-size: 14px;
+        line-height: 17px;
+        width: 238px;
+        height: 46px;
+    }
 }
