--- a/blocks/form/__title/form__title.css
+++ b/blocks/form/__title/form__title.css
@@ -4,3 +4,10 @@
     line-height: 29px;
     color: #000000;
 }
+
+@media screen and (max-width: 550px) {
+    .form__title {
+        font-size: 18px;
+        line-height: 22px;
+    }
+}
