--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -10,3 +10,11 @@
     flex-direction: column;
     justify-content: space-between;
 }
+
+@media screen and (max-width: 550px) {
+    .form {
+        width: 282px;
+        height: 322px;
+        padding: 25px 22px;
+    }
+}
