--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -2,6 +2,7 @@
     width: 32px;
     height: 32px;
     background-image: url(../../../images/icon-close.svg);
+    background-size: contain;
     cursor: pointer;
     transition: all .25s;
     position: absolute;
@@ -11,4 +12,13 @@
 
 .popup__close:hover {
     opacity: 0.6;
+}
+
+@media screen and (max-width: 550px) {
+    .popup__close {
+        width: 20px;
+        height: 20px;
+        top: -36px;
+        right: 0;
+    }
 }
