--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -2,3 +2,10 @@
     justify-self: start;
     margin-left: 30px;
 }
+
+@media screen and (max-width: 700px) {
+    .profile__info {
+        margin: 26px 0 36px 0;
+        text-align: center;
+    }
+}
