--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -4,3 +4,18 @@
     margin-top: 40px;
     align-items:center
 }
+
+@media screen and (max-width: 900px) {
+    .profile {
+       margin: 40px 20px 0 20px;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .profile {
+        margin-top: 42px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+}
