--- a/pages/index.css
+++ b/pages/index.css
@@ -25,6 +25,8 @@
 @import url(../blocks/element/__approve/_active/element__approve_active.css);
 
 @import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/_opened/popup_opened.css);
+
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/__close/popup__close.css);
 
