--- a/blocks/element/__btn/element__btn.css
+++ b/blocks/element/__btn/element__btn.css
@@ -1,13 +1,16 @@
-.element__approve {
-    display: inline-block;
+.element__btn {
     width: 22px;
     height: 19px;
     background-image: url(../../../images/disabled.svg);
+    background-size: cover;
     transition: all .25s;
     cursor: pointer;
-    margin-right: 30px;
+    margin-right: 20px;
+    padding: 0;
+    border: none;
+    background-color: #fff;
 }
 
-.element__approve:hover {
+.element__btn:hover {
     opacity: .5;
 }
