--- a/blocks/form/__btn/form__btn.css
+++ b/blocks/form/__btn/form__btn.css
@@ -5,7 +5,7 @@
     text-align: center;
     color: #FFFFFF;
     width: 358px;
-    height: 50px;
+    min-height: 50px;
     background: #000000;
     border-radius: 2px;
     cursor: pointer;
@@ -23,6 +23,6 @@
         font-size: 14px;
         line-height: 17px;
         width: 238px;
-        height: 46px;
+        min-height: 46px;
     }
 }
