--- a/blocks/form/__input/form__input.css
+++ b/blocks/form/__input/form__input.css
@@ -6,7 +6,7 @@
     border: none;
     padding: 0;
     padding-bottom: 13px;
-    border-bottom: 1px solid rgba(0,0,0,.2);
+    border-bottom: 1px solid rgba(0, 0, 0, .2);
 }
 
 .form__input:focus {
