--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -1,9 +1,7 @@
 .form {
     width: 430px;
-    height: 330px;
-    background: #FFF;
+    min-height: 330px;
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
-    border-radius: 10px;
     padding: 36px;
     box-sizing: border-box;
     display: flex;
@@ -14,7 +12,7 @@
 @media screen and (max-width: 550px) {
     .form {
         width: 282px;
-        height: 322px;
+        min-height: 322px;
         padding: 25px 22px;
     }
 }
