--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,7 @@
 .header {
     margin-top: 45px;
     border-bottom: 1px solid #545454;
+    opacity: 0.7;
 }
 
 @media screen and (max-width: 900px) {
