--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,6 +1,6 @@
 .page {
   background: #000;
-  font-family: 'Inter';
+  font-family: 'Inter', Arial, sans-serif;
   color: #FFF;
   max-width: 880px;
   min-width: 320px;
