--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -8,6 +8,9 @@
     position: absolute;
     top: -40px;
     right: -40px;
+    padding: 0;
+    border: none;
+    background-color: transparent;
 }
 
 .popup__close:hover {
