--- a/blocks/profile/__edit-btn/profile__edit-btn.css
+++ b/blocks/profile/__edit-btn/profile__edit-btn.css
@@ -3,6 +3,7 @@
     height: 24px;
     background-image: url(../../../images/edit-btn.svg);
     background-color: #000;
+    background-size: cover;
     cursor: pointer;
     margin-left: 18px;
     padding: 0;
@@ -13,4 +14,12 @@
 
 .profile__edit-btn:hover {
     opacity: .6;
+}
+
+@media screen and (max-width: 380px) {
+    .profile__edit-btn {
+        width: 18px;
+        height: 18px;
+        margin-left: 10px;
+    }
 }
