--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -9,3 +9,10 @@
         text-align: center;
     }
 }
+
+@media screen and (max-width: 380px) {
+    .profile__info {
+        margin: 23px 0 33px 0;
+        text-align: center;
+    }
+}
