--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -1,13 +1,17 @@
 .profile__subtitle {
-    margin: 16px 0 0 0;
+    margin: 11px 0 0 0;
     font-weight: 400;
     font-size: 18px;
     line-height: 22px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    max-width: 300px;
 }
 
 @media screen and (max-width: 380px) {
     .profile__subtitle {
-        margin-top: 14px;
+        margin-top: 9px;
         font-size: 14px;
         line-height: 17px;
     }
