--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -13,5 +13,7 @@
     .profile__title {
         font-size: 27px;
         line-height: 33px;
+        margin-left: 29px;
+        max-width: 200px;
     }
 }
