--- a/blocks/form/__input/form__input.css
+++ b/blocks/form/__input/form__input.css
@@ -5,8 +5,9 @@
     line-height: 17px;
     border: none;
     padding: 0;
-    padding-bottom: 13px;
+    padding-bottom: 9px;
     border-bottom: 1px solid rgba(0, 0, 0, .2);
+    margin-top: 30px;
 }
 
 .form__input:focus {
