--- a/blocks/form/__title/form__title.css
+++ b/blocks/form/__title/form__title.css
@@ -3,11 +3,14 @@
     font-size: 24px;
     line-height: 29px;
     color: #000000;
+    margin: 0;
+    margin-bottom: 46px;
 }
 
 @media screen and (max-width: 550px) {
     .form__title {
         font-size: 18px;
         line-height: 22px;
+        margin-bottom: 73px;
     }
 }
