--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -2,4 +2,14 @@
     position: relative;
     background: #FFF;
     border-radius: 10px;
+    width: 430px;
+    min-height: 330px;
+    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
+}
+
+@media screen and (max-width: 550px) {
+    .popup__container {
+        width: 282px;
+        min-height: 322px;
+    }
 }
