--- a/blocks/form/__input/form__input.css
+++ b/blocks/form/__input/form__input.css
@@ -1,13 +1,15 @@
 .form__input {
     display: block;
+    width: 100%;
     font-weight: 400;
     font-size: 14px;
     line-height: 17px;
     border: none;
+    box-sizing: border-box;
     padding: 0;
     padding-bottom: 9px;
     border-bottom: 1px solid rgba(0, 0, 0, .2);
-    margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 .form__input:focus {
