--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,16 +1,15 @@
-.form__title {
+.popup__title {
     font-weight: 900;
     font-size: 24px;
     line-height: 29px;
     color: #000000;
     margin: 0;
-    margin-bottom: 46px;
 }
 
 @media screen and (max-width: 550px) {
-    .form__title {
+    .popup__title {
         font-size: 18px;
         line-height: 22px;
-        margin-bottom: 73px;
+        /* margin-bottom: 73px; */
     }
 }
