--- a/blocks/element/__img/element__img.css
+++ b/blocks/element/__img/element__img.css
@@ -2,6 +2,7 @@
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     width: 100%;
-    min-height: 282px;
+    height: 282px;
     object-fit: cover;
+    cursor: pointer;
 }
